examples/invalid/contract_affine_move.sarif
fn consume(text: Text) -> Text { text }
fn main(text: Text) -> Text requires consume(text) == text ensures consume(result) == result { text }
